[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web-actors = "4.3.0"
actix-web = "4.9.0"
rand = "0.9.0"
log = "0.4.25"
dashmap = "6.1.0"
tokio = "1.43.0"
tunnel_protocol = { path = "../tunnel_protocol" }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }