[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web-actors = "4.3.0"
actix-web = "4.10.2"
rand = "0.9.0"
dashmap = "7.0.0-rc2"
tokio = "1.44.2"
tunnel_protocol = { path = "../tunnel_protocol" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
once_cell = "1.21.3"
dotenvy = "0.15.7"