[package]
name = "tunnel_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
clap = { version = "4.5.27", features = ["derive"] }
futures-util = "0.3"
dotenvy = "0.15"
uuid = { version = "1.12.1", features = ["v4"] }
tokio-macros = "2.5.0"
tunnel_protocol = { path = "../tunnel_protocol" }
serde_json = "1.0.138"
reqwest = "0.12.12"