[package]
name = "tunnel_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
clap = { version = "4.5.36", features = ["derive"] }
futures-util = "0.3.31"
dotenvy = "0.15.7"
uuid = { version = "1.16.0", features = ["v4"] }
tokio-macros = "2.5.0"
tunnel_protocol = { path = "../tunnel_protocol" }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.15"